<resources>
    <string name="app_name">ShoeStore</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="welcome_store">Welcome to the store!</string>
    <string name="login_message">Please login or sign  up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="welcome_instructions">On the next screen, you will find instructions regarding how to use the app. Enjoy!</string>
    <string name="shoe_list_instructions">The main screen of the app contains all the shoes listed 
        in your shop, including information like: shoe name shoe size, description and company name</string>
    <string name="shoe_detail_instructions">From the shoe list screen, you can also add details for new shoes</string>
    <string name="instructions_button">Go to instructions</string>
    <string name="shoe_list_button">Show shoe list</string>
    <string name="login_title">Login</string>
    <string name="welcome_title">Welcome</string>
    <string name="instructions_title">Instructions</string>
    <string name="shoe_list_title">Shoe List</string>
    <string name="add_shoe_to_list">Click the button to add a shoe to the list</string>-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_detail_title">Shoe Details</string>
    <string name="shoe_detail_label">Enter the shoe details</string>
    <string name="shoe_name">Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="fill_all_fields_message">One or more fields are empty. Please fill them and then Save</string>
    <string name="placeholder_shoe_name">Boots</string>
    <string name="placeholder_shoe_company">Harley Davidson</string>
    <string name="placeholder_shoe_size">7.5</string>
    <string name="placeholder_shoe_description">Leather boots, black</string>
</resources>
