<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- I have used LinearLayout because the view positioning is simple (just the views vertically
     placed ), so no need for something more complex-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.welcome.WelcomeFragment"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TitleTextView"
            android:text="@string/welcome_store"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextView"
            android:background="@drawable/rounded_corner"
            android:text="@string/welcome_instructions" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/instructions_button"
            android:background="@drawable/rounded_button"
            android:padding="@dimen/padding_textview"/>

    </LinearLayout>

</layout>
