<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <!-- The use of ConstraintLayout is required because there are views that need to be placed
    relatively to each other, both horizontally and vertically -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/colorShoeDetailCard">

        <TextView
            android:id="@+id/name_textview"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@{shoe.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_details"
            tools:text="@string/placeholder_shoe_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_details">

            <TextView
                android:id="@+id/company_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@{shoe.company}"
                tools:text="@string/placeholder_shoe_company" />

            <TextView
                android:id="@+id/size_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@{String.valueOf(shoe.size)}"
                tools:text="@string/placeholder_shoe_size" />

            <TextView
                android:id="@+id/description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@{shoe.description}"
                tools:text="@string/placeholder_shoe_description" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
